fix dropdown hover text shift

--- a/theme/src/components/form-options/_form-options.scss
+++ b/theme/src/components/form-options/_form-options.scss
@@ -61,6 +61,7 @@
 
 .select-arrow-active {
   border-width: 0.125em;
+  margin: -0.0625em;
   :after {
     display: inline-block;
     float: right;
